--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: dutchtabletops
+Package: dutchtabletops_data
 Type: Package
 Title: Data on Seventeenth-Century Dutch Tabletop Still Lifes
 Version: 0.1
