make sure package name is R-valid

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: dutchtabletops_data
+Package: dutchtabletopsdata
 Type: Package
 Title: Data on Seventeenth-Century Dutch Tabletop Still Lifes
 Version: 0.1
