let's be honest, dplyr&tidyr should be fully attached

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,10 @@ Description: Database of 629 tabletop still life paintings by seventeenth-
     century painters from Haarlem, coded by stylistic and iconographic properties.
 License: MIT
 LazyData: TRUE
-Imports:
+Depends:
     dplyr,
-    tidyr,
+    tidyr
+Imports:
     randomForest,
     stringr,
     plyr,
