--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,10 @@ export(comp_vars)
 export(cross_named_lists)
 export(error_only)
 export(motif_vars)
+export(pca_loadings_df)
+export(pca_obs_df)
+export(pca_rf)
 export(restore_rownames)
+export(rf_local_importance)
 export(rf_votes)
 export(run_rf)
