Make description more general

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: dutchtabletopsdata
 Type: Package
-Title: Data on Seventeenth-Century Dutch Tabletop Still Lifes
+Title: Seventeenth-Century Dutch Tabletop Still Lifes
 Version: 0.1.0
 Authors@R: c(
   person("Matthew", "Lincoln", email = "matthew.d.lincoln@gmail.com",
     role = c("aut", "cre")),
   person("Quint", "Gregory", email = "quint5art@gmail.com", role = "aut"))
-Description: Database of 629 tabletop still life paintings by seventeenth-
+Description: Database of tabletop still life paintings by seventeenth-
     century painters from Haarlem, coded by stylistic and iconographic properties.
 License: MIT
 LazyData: TRUE
