--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(multiplot)
 export(pca_loadings_df)
 export(pca_obs_df)
 export(pca_rf)
+export(prep_vars)
 export(rf_local_importance)
 export(rf_votes)
 export(run_rf)
