Plot test data more effectively

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,6 @@ export(rf_local_importance)
 export(rf_votes)
 export(run_rf)
 export(test_confusion)
+export(test_error)
+export(theme_error)
+import(ggplot2)
