Helper methods to access rf model attributes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,14 @@ export(pca_obs_df)
 export(pca_rf)
 export(prep_vars)
 export(rf_local_importance)
+export(rf_predictors)
+export(rf_response)
+export(rf_rownames)
+export(rf_tx)
+export(rf_ty)
 export(rf_votes)
+export(rf_x)
+export(rf_y)
 export(run_rf)
 export(test_confusion)
 export(test_error)
