--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,4 +22,6 @@ export(run_rf)
 export(test_confusion)
 export(test_error)
 export(theme_error)
+export(top_n_importance)
+export(top_n_importance_names)
 import(ggplot2)
