implement a raggedy rf effects visualizer
I've no idea why gather can't find the right column names unless I print() them - this defies everything I've come to expect with R.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(pca_loadings_df)
 export(pca_obs_df)
 export(pca_rf)
 export(prep_vars)
+export(rf_effects)
 export(rf_local_importance)
 export(rf_predictors)
 export(rf_response)
